RDKCOM-3001: RDKDEV-139 Develop OCDM CAS Solution
Reason for change:
Added CASPipelineController
Fixed use of Factory and Manager
Added RDK-M (c) Headers
Merged CAS/Helper commands
Network command and Data command are separate
CAS System needs to be per stream, but with an underlying system that communicates to the upstream CAS
Handling the network-request method for provisioning and licensing request
Handling the private/public data received through onKeyMessage from OpenCDM.
Added Management and Tuning Support
Add Start Filter to Section Filter
Support for CAS Management Interface
Handling Section Filter commands (create, start, destroy, setstate)
Update CAS manager for SectionFilter and Pipeline interfaces
Fixing CAS issues in filter commands parsing, update CAS status
Tuning support changes in qamsource and inband si manager
Updated the missing changes during local code merge
Fix the linking error in the gerrit review test
Support for processing sectionfilter data
 Enable Macro CAT_FUNCTIONALITY through config flags
Added Audio Source Change Support
Disable CRC for ECM section data
Mutiple filters support for ECM/EMM Pids
KeyHandle formulation to set keyslot
Add support for handling PSI update
Add support for filterMode Oneshot for CAS
Address the gap in stopTune interms of setState and resource cleanup
Fix destURL in processNetworkRequest
Have flag for paddingbytes for section
Handle Crash during channel change
Add support for delete key slot
Fix build for rmfgeneric to include anycas as part of rmfgeneric
Move CASSystemImpl to Underlying system
Control of presentation in rdkmediaplayer upon PID change
Create CASSectionFilterImpl
Handle getCASSession API to properly to handle erase of session in proper way
Remove open_cdm_destruct_session from session close and handle it in destructor
Add Support for Delete Key slot and Implement CASSectionFilterImpl for OCDM CAS
Test Procedure: Nil
Risks: Medium
Signed-off-by: Howard Teece <hteece@synamedia.com>

(cherry picke

--- a/configure.ac
+++ b/configure.ac
@@ -75,6 +75,7 @@ CC_ENABLE=" "
 RBI_ENABLE=" "
 RBI_ENABLE_ADCACHE=" "
 ENABLE_QAM=" "
+ENABLE_EXTERNAL_CAS=" "
 ENABLE_IPPVRC=" "
 OSAL_ENABLE=" "
 ENABLE_YOCTO=" "
@@ -238,6 +239,17 @@ AC_ARG_ENABLE([qam],
     	      ],
     	      [echo "qam is disabled"])
 AM_CONDITIONAL([ENABLE_QAM],[test x$ENABLE_QAM = xtrue])
+AC_ARG_ENABLE([external-cas],
+              AS_HELP_STRING([--enable-external-cas],[enable external cas plugin (default is no)]),
+              [
+          case "${enableval}" in
+           yes) ENABLE_EXTERNAL_CAS=true PLUGIN_SRC="$PLUGIN_SRC anycas";;
+           no)  AC_MSG_ERROR([external cas plugin is disabled]) ;;
+           *) AC_MSG_ERROR([bad value ${enableval} for --enable-external-cas]) ;;
+          esac
+            ],
+            [echo "external cas is disabled"])
+AM_CONDITIONAL([ENABLE_EXTERNAL_CAS],[test x$ENABLE_EXTERNAL_CAS = xtrue])
 AC_ARG_ENABLE([emulator-qam],
               AS_HELP_STRING([--enable-emulator-qam],[enable emulator qamsrc plugin (default is no)]),
               [
@@ -464,6 +476,8 @@ AC_CONFIG_FILES([Makefile
 	 qamsource/sdv/Makefile
 	 qamsource/oobsimgrstub/Makefile
 	 qamsource/main/Makefile
+	 anycas/Makefile
+	 anycas/test/Makefile
      dumpfilesink/Makefile
      rbi/Makefile
      rbi/test/Makefile
