--- a/qamsource/main/Makefile.am
+++ b/qamsource/main/Makefile.am
@@ -54,7 +54,9 @@ LOCAL_DEFINES =   -DMERGE_INTEL \
                   -D$(MFR_NAME) \
                   -DIPPV_CLIENT_ENABLED  \
                   -DUSE_PXYSRVC  \
-                  -DQAMSRC_PMTBUFFER_PROPERTY
+                  -DQAMSRC_PMTBUFFER_PROPERTY \
+                  -DQAMSRC_PATBUFFER_PROPERTY \
+                  -DQAMSRC_CATBUFFER_PROPERTY
 
 if ENABLE_PODMGR
 LOCAL_DEFINES += -DUSE_POD -DMPOD_SUPPORT -DTEST_WITH_PODMGR -DUSE_POD_IPC
@@ -64,6 +66,10 @@ if HEADLESS
 LOCAL_DEFINES+= -DHEADLESS_GW
 else
 LOCAL_DEFINES+= -DHEADED_GW
+endif
+
+if ENABLE_EXTERNAL_CAS
+LOCAL_DEFINES += -DUSE_EXTERNAL_CAS -DCAT_FUNCTIONALITY
 endif
 
 AM_CXXFLAGS =  -fdata-sections -ffunction-sections -pthread $(GST_CFLAGS) $(LOCAL_DEFINES) \
