RDKCOM-3088 RDKCMF-8832: Fix the build issue for OCDM Working group CAS
Reason for change:
Fix the build issue for OCDM Working group CAS in Dunfell build
Test Procedure: Build only.
Risks: None.
Signed-off-by: Pradeepta Das <Pradeepta_Das@comcast.com>

(cherry picked from commit 2bf1e335d69f7e90ed7e03fe794342a3c5234438)
Change-Id: Ie7e15447fc3f8113d34191a1514a38d6a9ee6d5e

--- a/anycas/Makefile.am
+++ b/anycas/Makefile.am
@@ -6,7 +6,7 @@ DIST_SUBDIRS =
 
 AM_CXXFLAGS =  -fdata-sections -ffunction-sections -pthread $(GST_CFLAGS) \
               -I${srcdir}/include -I${srcdir}/src/include -I=/usr/include/opencdm \
-              ${GLIB_CFLAGS}
+	      ${GLIB_CFLAGS} -std=c++17 
 
 lib_LTLIBRARIES = libocdmmock.la libanycas.la
 
